releases/0.2.0/docs/cpp/_sources/api/program_listing_file_cppdocs_generated_include_slint_generated_public.h.rst.txt

.. _program_listing_file_cppdocs_generated_include_slint_generated_public.h:

Program Listing for File slint_generated_public.h
=================================================

|exhale_lsh| :ref:`Return to documentation for file <file_cppdocs_generated_include_slint_generated_public.h>` (``cppdocs/generated_include/slint_generated_public.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   #pragma once
   
   /* Generated with cbindgen:0.20.0 */
   
   #include <cstdarg>
   #include <cstdint>
   #include <cstdlib>
   #include <ostream>
   #include <new>
   
   #define SLINT_VERSION_MAJOR 0
   #define SLINT_VERSION_MINOR 2
   #define SLINT_VERSION_PATCH 0
   
   
   namespace slint {
   
   enum class GraphicsAPI {
       NativeOpenGL,
   };
   
   enum class RenderingState {
       RenderingSetup,
       BeforeRendering,
       AfterRendering,
       RenderingTeardown,
   };
   
   enum class SetRenderingNotifierError {
       Unsupported,
       AlreadySet,
   };
   
   enum class TimerMode {
       SingleShot,
       Repeated,
   };
   
   } // namespace slint
